# Manai

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
manai/: __init__.py  agent.py  cli.py  client.py  examples.py  generator.py  knowledge.py  math_engine.py  ollama_client.py  prompts.py  templates_2d.py  templates_3d.py  templates_algebra.py  templates_calculus.py  templates_physics.py  templates_special.py  templates_stats.py  templates_trig.py  transitions.py  ui.py  utils.py  voiceover.py
manai/web/: __init__.py  server.py
